--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,8 @@
     "angular-leaflet-directive": "~0.7.11",
     "angular-bootstrap-show-errors": "~2.3.0",
     "Leaflet.awesome-markers": "~2.0.2",
-    "ngDialog": "~0.3.11"
+    "ngDialog": "~0.3.11",
+    "angular-scroll": "~0.6.5"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
