--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,8 @@
     "angular-bootstrap-show-errors": "~2.3.0",
     "Leaflet.awesome-markers": "~2.0.2",
     "ngDialog": "~0.3.11",
-    "angular-scroll": "~0.6.5"
+    "angular-scroll": "~0.6.5",
+    "angular-ui-router": "~0.2.13"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
