--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,8 @@
     "Leaflet.awesome-markers": "~2.0.2",
     "ngDialog": "~0.3.11",
     "angular-scroll": "~0.6.5",
-    "angular-ui-router": "~0.2.13"
+    "angular-ui-router": "~0.2.13",
+    "font-awesome": "~4.3.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
