--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,8 @@
     "leaflet": "*",
     "angular-scroll": "~0.6.5",
     "angular-ui-router": "~0.2.13",
-    "font-awesome": "~4.3.0"
+    "font-awesome": "~4.3.0",
+    "fastclick" : "*"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
