--- a/bower.json
+++ b/bower.json
@@ -4,19 +4,19 @@
   "dependencies": {
     "angular": "^1.3.0",
     "angular-animate": "^1.3.0",
+    "angular-bootstrap-show-errors": "~2.3.0",
+    "angular-leaflet-directive": "*",
     "angular-resource": "^1.3.0",
     "angular-route": "^1.3.0",
-    "angular-touch": "^1.3.0",
-    "ngAutocomplete": "~1.0.0",
-    "angular-leaflet-directive": "*",
-    "angular-bootstrap-show-errors": "~2.3.0",
-    "Leaflet.awesome-markers": "~2.0.2",
-    "ngDialog": "~0.3.11",
-    "leaflet": "*",
     "angular-scroll": "~0.6.5",
+    "angular-touch": "^1.3.0",
     "angular-ui-router": "~0.2.13",
+    "fastclick": "*",
     "font-awesome": "~4.3.0",
-    "fastclick" : "*"
+    "leaflet": "*",
+    "Leaflet.awesome-markers": "~2.0.2",
+    "ngAutocomplete": "~1.0.0",
+    "ngDialog": "~0.3.11"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
