--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "node": ">=0.10.0"
   },
   "scripts": {
-    "test": "grunt test"
+    "test": "grunt test",
+    "serve": "grunt serve",
+    "build": "grunt build"
   }
 }
