--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "scripts": {
     "test": "grunt test",
     "serve": "grunt serve",
-    "build": "grunt build"
+    "build": "grunt build",
+    "deploy": "git subtree push --prefix dist origin gh-pages"
   }
 }
