--- a/package.json
+++ b/package.json
@@ -1,40 +1,51 @@
 {
   "name": "doctorpricerweb",
   "version": "0.0.0",
-  "dependencies": {},
+  "dependencies": {
+    "@uirouter/angularjs": "^1.0.19",
+    "Leaflet.awesome-markers": "lvoogdt/Leaflet.awesome-markers#~2.0.2",
+    "angular": "1.7.3",
+    "angular-animate": "^1.7.3",
+    "angular-bootstrap-show-errors": "paulyoder/angular-bootstrap-show-errors#~2.3.0",
+    "angular-mocks": "^1.7.3",
+    "angular-resource": "^1.7.3",
+    "angular-route": "^1.7.3",
+    "angular-scroll": "^1.0.2",
+    "angular-simple-logger": "^0.1.7",
+    "angular-touch": "^1.7.3",
+    "angular-ui-bootstrap": "^2.5.6",
+    "clean-webpack-plugin": "^0.1.19",
+    "copy-webpack-plugin": "^4.5.2",
+    "font-awesome": "^4.7.0",
+    "font-awesome-webpack": "https://github.com/jarecsni/font-awesome-webpack#440af2a2efe7ba1779d039556f04538e57bad4bb",
+    "grunt-browserify": "^5.3.0",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
+    "leaflet": "^1.3.3",
+    "less": "^3.8.1",
+    "less-loader": "^4.1.0",
+    "ngAutocomplete": "wpalahnuk/ngAutocomplete#~1.0.0",
+    "ngDialog": "likeastore/ngDialog#~0.3.11",
+    "polyline-encoded": "^0.0.8",
+    "ui-leaflet": "^1.0.3",
+    "url-loader": "^1.0.1",
+    "webpack": "^4.16.5",
+    "webpack-serve": "^2.0.2"
+  },
   "repository": {},
   "devDependencies": {
-    "grunt": "^0.4.5",
-    "grunt-autoprefixer": "^2.0.0",
-    "grunt-concurrent": "^1.0.0",
-    "grunt-contrib-clean": "^0.6.0",
-    "grunt-contrib-concat": "^0.5.0",
-    "grunt-contrib-connect": "^0.9.0",
-    "grunt-contrib-copy": "^0.7.0",
-    "grunt-contrib-cssmin": "^0.12.0",
-    "grunt-contrib-htmlmin": "^0.4.0",
-    "grunt-contrib-jshint": "^0.11.0",
-    "grunt-contrib-uglify": "^0.7.0",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-filerev": "^2.1.2",
-    "grunt-karma": "^0.10.1",
-    "grunt-newer": "^1.1.0",
-    "grunt-ng-annotate": "^0.9.2",
-    "grunt-usemin": "^3.0.0",
-    "grunt-wiredep": "^2.0.0",
-    "jshint-stylish": "^1.0.0",
-    "karma-jasmine": "^0.3.5",
-    "karma-phantomjs-launcher": "^0.1.4",
-    "load-grunt-tasks": "^3.1.0",
-    "time-grunt": "^1.0.0"
+    "css-loader": "^1.0.0",
+    "file-loader": "^1.1.11",
+    "style-loader": "^0.22.1",
+    "webpack-command": "^0.4.1"
   },
   "engines": {
-    "node": ">=0.10.0"
+    "node": ">=0.10.0",
+    "yarn": ">= 1.0.0"
   },
   "scripts": {
-    "test": "grunt test",
-    "serve": "grunt serve",
-    "build": "grunt build",
+    "serve": "webpack-serve --open --content dist --port 9001",
+    "build": "webpack",
     "deploy": "git subtree push --prefix dist origin gh-pages"
   }
 }
