--- a/package.json
+++ b/package.json
@@ -14,30 +14,30 @@
     "angular-simple-logger": "^0.1.7",
     "angular-touch": "^1.7.3",
     "angular-ui-bootstrap": "^2.5.6",
-    "clean-webpack-plugin": "^0.1.19",
-    "copy-webpack-plugin": "^4.5.2",
     "font-awesome": "^4.7.0",
     "font-awesome-webpack": "https://github.com/jarecsni/font-awesome-webpack#440af2a2efe7ba1779d039556f04538e57bad4bb",
-    "grunt-browserify": "^5.3.0",
-    "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^3.2.0",
     "leaflet": "^1.3.3",
-    "less": "^3.8.1",
-    "less-loader": "^4.1.0",
     "ngAutocomplete": "wpalahnuk/ngAutocomplete#~1.0.0",
-    "ngDialog": "likeastore/ngDialog#~0.3.11",
     "polyline-encoded": "^0.0.8",
-    "ui-leaflet": "^1.0.3",
-    "url-loader": "^1.0.1",
-    "webpack": "^4.16.5",
-    "webpack-serve": "^2.0.2"
+    "uglifyjs-webpack-plugin": "^1.2.7",
+    "ui-leaflet": "^1.0.3"
   },
   "repository": {},
   "devDependencies": {
     "css-loader": "^1.0.0",
     "file-loader": "^1.1.11",
     "style-loader": "^0.22.1",
-    "webpack-command": "^0.4.1"
+    "webpack-command": "^0.4.1",
+    "webpack": "^4.16.5",
+    "webpack-bundle-analyzer": "^2.13.1",
+    "webpack-serve": "^2.0.2",
+    "url-loader": "^1.0.1",
+    "less": "^3.8.1",
+    "less-loader": "^4.1.0",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
+    "clean-webpack-plugin": "^0.1.19",
+    "copy-webpack-plugin": "^4.5.2"
   },
   "engines": {
     "node": ">=0.10.0",
@@ -45,7 +45,7 @@
   },
   "scripts": {
     "serve": "webpack-serve --open --content dist --port 9001",
-    "build": "webpack",
+    "build": "webpack --run-prod",
     "deploy": "git subtree push --prefix dist origin gh-pages"
   }
 }
