--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "angular-touch": "^1.7.3",
     "angular-ui-bootstrap": "^2.5.6",
     "font-awesome": "^4.7.0",
-    "font-awesome-webpack": "https://github.com/jarecsni/font-awesome-webpack#440af2a2efe7ba1779d039556f04538e57bad4bb",
     "leaflet": "^1.3.3",
     "ngAutocomplete": "wpalahnuk/ngAutocomplete#~1.0.0",
     "polyline-encoded": "^0.0.8",
@@ -24,20 +23,20 @@
   },
   "repository": {},
   "devDependencies": {
+    "clean-webpack-plugin": "^0.1.19",
+    "copy-webpack-plugin": "^4.5.2",
     "css-loader": "^1.0.0",
     "file-loader": "^1.1.11",
-    "style-loader": "^0.22.1",
-    "webpack-command": "^0.4.1",
-    "webpack": "^4.16.5",
-    "webpack-bundle-analyzer": "^2.13.1",
-    "webpack-serve": "^2.0.2",
-    "url-loader": "^1.0.1",
-    "less": "^3.8.1",
-    "less-loader": "^4.1.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
-    "clean-webpack-plugin": "^0.1.19",
-    "copy-webpack-plugin": "^4.5.2"
+    "less": "^3.8.1",
+    "less-loader": "^4.1.0",
+    "style-loader": "^0.22.1",
+    "url-loader": "^1.0.1",
+    "webpack": "^4.16.5",
+    "webpack-bundle-analyzer": "^2.13.1",
+    "webpack-command": "^0.4.1",
+    "webpack-serve": "^2.0.2"
   },
   "engines": {
     "node": ">=0.10.0",
