--- a/package.json
+++ b/package.json
@@ -43,8 +43,8 @@
     "yarn": ">= 1.0.0"
   },
   "scripts": {
-    "serve": "ENV=dev webpack-serve --config webpack.config.dev.js --open --content dist --port 9001",
-    "build": "webpack --run-prod",
+    "serve": "set ENV=dev && webpack-serve --open --content dist --port 9001",
+    "build": "set ENV=production && webpack --run-prod",
     "deploy": "git subtree push --prefix dist origin gh-pages"
   }
 }
