--- a/package.json
+++ b/package.json
@@ -35,15 +35,16 @@
     "url-loader": "^1.0.1",
     "webpack": "^4.16.5",
     "webpack-bundle-analyzer": "^2.13.1",
+    "webpack-cli": "^3.1.2",
     "webpack-command": "^0.4.1",
-    "webpack-serve": "^2.0.2"
+    "webpack-dev-server": "^3.1.9"
   },
   "engines": {
     "node": ">=0.10.0",
     "yarn": ">= 1.0.0"
   },
   "scripts": {
-    "serve": "set ENV=dev && webpack-serve --open --content dist --port 9001",
+    "serve": "set ENV=dev && webpack-dev-server",
     "build": "set ENV=production && webpack --run-prod",
     "deploy": "git subtree push --prefix dist origin gh-pages"
   }
