--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "angular-route": "^1.7.3",
     "angular-scroll": "^1.0.2",
     "angular-simple-logger": "^0.1.7",
-    "angular-touch": "^1.7.3",
     "angular-ui-bootstrap": "^2.5.6",
     "font-awesome": "^4.7.0",
+    "hammerjs": "^2.0.8",
     "leaflet": "^1.3.3",
     "ngAutocomplete": "wpalahnuk/ngAutocomplete#~1.0.0",
     "polyline-encoded": "^0.0.8",
