--- a/package.json
+++ b/package.json
@@ -2,50 +2,42 @@
   "name": "doctorpricerweb",
   "version": "0.0.0",
   "dependencies": {
-    "@uirouter/angularjs": "^1.0.19",
-    "Leaflet.awesome-markers": "lvoogdt/Leaflet.awesome-markers#~2.0.2",
-    "angular": "1.7.3",
-    "angular-animate": "^1.7.3",
+    "@uirouter/angularjs": "^1.0.30",
+    "angular": "1.8.3",
+    "angular-animate": "^1.8.3",
     "angular-bootstrap-show-errors": "^2.3.0",
-    "angular-mocks": "^1.7.3",
-    "angular-resource": "^1.7.3",
-    "angular-route": "^1.7.3",
+    "angular-mocks": "^1.8.3",
+    "angular-resource": "^1.8.3",
+    "angular-route": "^1.8.3",
     "angular-scroll": "^1.0.2",
     "angular-simple-logger": "^0.1.7",
     "angular-ui-bootstrap": "^2.5.6",
+    "drmonty-leaflet-awesome-markers": "^2.0.2",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
-    "leaflet": "^1.3.3",
-    "ngAutocomplete": "wpalahnuk/ngAutocomplete#~1.0.0",
-    "polyline-encoded": "^0.0.8",
-    "uglifyjs-webpack-plugin": "^1.2.7",
+    "leaflet": "^1.8.0",
+    "ng-autocomplete": "^1.0.0",
+    "polyline-encoded": "^0.0.9",
     "ui-leaflet": "^1.0.3"
   },
-  "repository": {},
   "devDependencies": {
-    "clean-webpack-plugin": "^0.1.19",
-    "copy-webpack-plugin": "^4.5.2",
-    "css-loader": "^1.0.0",
-    "file-loader": "^1.1.11",
-    "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^3.2.0",
-    "less": "^3.8.1",
-    "less-loader": "^4.1.0",
-    "style-loader": "^0.22.1",
-    "url-loader": "^1.0.1",
-    "webpack": "^4.16.5",
-    "webpack-bundle-analyzer": "^2.13.1",
-    "webpack-cli": "^3.1.2",
-    "webpack-command": "^0.4.1",
-    "webpack-dev-server": "^3.1.9"
-  },
-  "engines": {
-    "node": ">=0.10.0",
-    "yarn": ">= 1.0.0"
+    "gh-pages": "^4.0.0",
+    "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^11.0.0",
+    "css-loader": "^6.7.1",
+    "html-loader": "^3.1.2",
+    "html-webpack-plugin": "^5.5.0",
+    "less": "^4.1.3",
+    "less-loader": "^11.0.0",
+    "style-loader": "^3.3.1",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.73.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.9.2"
   },
   "scripts": {
-    "serve": "set ENV=dev && webpack-dev-server",
-    "build": "set ENV=production && webpack --run-prod",
-    "deploy": "git subtree push --prefix dist origin gh-pages"
+    "start": "webpack-dev-server --mode=production",
+    "build": "webpack --mode=production",
+    "deploy": "gh-pages -d dist"
   }
 }
