Add support for selecting whether you have a CSC card, throw some shade at pegasus pho

--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "webpack-dev-server": "^4.9.2"
   },
   "scripts": {
-    "start": "webpack-dev-server --mode=production",
+    "start": "webpack-dev-server --mode=development",
     "build": "webpack --mode=production",
     "deploy": "gh-pages -d dist"
   }
